--- a/doc/manual/R-FAQ.texi
+++ b/doc/manual/R-FAQ.texi
@@ -554,15 +554,15 @@ The @file{bin/linux} directory of a @CRAN{} site contains the following
 packages.
 
 @quotation
-@multitable {Red Hat} {i386/x86_64} {dapper/gutsy/hardy/intrepid} {Martyn Plummer}
+@multitable {Red Hat} {i386/x86_64} {hardy/karmic/lucid/maverick} {Martyn Plummer}
 @headitem @tab CPU @tab Versions @tab Provider
 @item Debian   @tab i386/amd64 @tab etch-cran @tab Johannes Ranke
 @item          @tab i386       @tab lenny-cran @tab Johannes Ranke
-@item Red Hat  @tab i386/x86_64 @tab fedora8/fedora9/fedora10 @tab Martyn Plummer
-@item          @tab i386/x86_64 @tab el4/el5 @tab Bob Kinney
-@item SuSE     @tab i586/x86_64 @tab 10.3/11.0/11.1 @tab Detlef Steuer
-@item Ubuntu   @tab i386   @tab hardy/intrepid/jaunty/karmic @tab Vincent Goulet
-@item          @tab amd64  @tab hardy/intrepid/jaunty/karmic @tab Michael Rutter
+@item Red Hat  @tab i386/x86_64 @tab fedora10/fedora11 @tab Martyn Plummer
+@c @item          @tab i386/x86_64 @tab el4/el5 @tab Bob Kinney
+@c @item SuSE     @tab i586/x86_64 @tab 10.3/11.0/11.1 @tab Detlef Steuer
+@item Ubuntu   @tab i386   @tab hardy/karmic/lucid/maverick @tab Vincent Goulet
+@item          @tab amd64  @tab hardy/karmic/lucid/maverick @tab Michael Rutter
 @end multitable
 @end quotation
 
@@ -580,21 +580,22 @@ Debian packages and installing the backports, which should also be
 suitable for other Debian derivatives.  Native backports for Ubuntu are
 provided by Vincent Goulet and Michael Rutter.
 
-On SUSE, you can set up an installation source for R within Yast by
-setting (e.g.)
+R binaries for Fedora, maintained by Tom ``Spot'' Callaway, are provided
+as part of the Fedora distribution and can be accessed through
+@command{yum}, the RPM installer/updater.  The Fedora R RPM is a
+``meta-package'' which installs all the user and developer components of
+R (available separately as @code{R-core} and @code{R-devel}), as well as
+the standalone R math library (@code{libRmath} and
+@code{libRmath-devel}).  RPMs for a selection of R packages are also
+provided by Fedora.  The Extra Packages for Enterprise Linux (EPEL)
+project (@url{http://fedoraproject.org/wiki/EPEL}) provides ports of the
+Fedora RPMs for RedHat Enterprise Linux and compatible distributions.
+When a new version of R is released, there may be a delay of up to 2 
+weeks until the Fedora RPM becomes publicly available, as it must pass
+through the statutory Fedora review process.
 
-@example
-Protocol: HTTP
-Server name: software.openSUSE.org
-Directory: /download/home:/dsteuer/openSUSE_11.1/
-@end example
-
-With this setting, online updates will check for new versions of R.
-
-@c Once you have added that line the programs @command{apt-get},
-@c @command{apt-cache}, and @command{dselect} (using the apt access
-@c method) will automatically detect and install updates of the R
-@c packages.
+See @url{http://cran.r-project.org/bin/linux/suse/README.html} for
+information about RPMs for openSUSE.
 
 @c The @file{bin/osf} directory of a @CRAN{} site contains RPMs
 @c by Albrecht Gebhardt for alpha systems running Alpha Unix
@@ -3083,7 +3084,7 @@ carefully.
 For more information, see e.g.@: David Goldberg (1991), ``What Every
 Computer Scientist Should Know About Floating-Point Arithmetic'',
 @emph{ACM Computing Surveys}, @strong{23/1}, 5--48, also available via
-@url{http://docs.sun.com/source/806-3568/ncg_goldberg.html}.
+@url{http://www.validlab.com/goldberg/paper.pdf}.
 
 To quote from ``The Elements of Programming Style'' by Kernighan and
 Plauger:
@@ -3513,14 +3514,14 @@ bug.  This ensures that the site profile and saved data files are not
 read.
 
 Before you actually submit a bug report, you should check whether the
-bug has already been reported and/or fixed.  First, try the ``Search
-Existing Reports'' facility in the Bug Tracking page at
+bug has already been reported and/or fixed.  First, try the ``Show open
+bugs new-to-old'' or the search facility on
 @url{http://bugs.R-project.org/}.  Second, consult
-@url{https://svn.R-project.org/R/trunk/NEWS}, which records changes that
-will appear in the @emph{next} release of R, including some bug fixes
-that do not appear in Bug Tracking.  (Windows users should additionally
-consult
-@url{https://svn.R-project.org/@/R/@/trunk/@/src/@/gnuwin32/@/CHANGES}.)
+@url{https://svn.R-project.org/@/R/@/trunk/@/doc/@/NEWS.Rd}, which
+records changes that will appear in the @emph{next} release of R,
+including bug fixes that do not appear on the Bug Tracker.  (Windows
+users should additionally consult
+@url{https://svn.R-project.org/@/R/@/trunk/@/src/@/gnuwin32/@/CHANGES.Rd}.)
 Third, if possible try the current r-patched or r-devel version of R.
 If a bug has already been reported or fixed, please do not submit
 further bug reports on it.  Finally, check carefully whether the bug is
@@ -3529,12 +3530,11 @@ should be sent first to the package maintainer, and only submitted to
 the R-bugs repository by package maintainers, mentioning the package in
 the subject line.
 
-On Unix-like systems a bug report can be generated using the function
-@code{bug.report()}.  This automatically includes the version
-information and sends the bug to the correct address.  Alternatively the
-bug report can be emailed to @email{R-bugs@@R-project.org} or submitted
-to the Web page at @url{http://bugs.R-project.org/}.  Please try
-including results of @code{sessionInfo()} in your bug report.
+A bug report can be generated using the function @code{bug.report()}.
+For reports on R this will open the Web page at
+@url{http://bugs.R-project.org/}: for a contributed package it will open
+the package's bug tracker Web page or help you compose an email to the
+maintainer.
 
 There is a section of the bug repository for suggestions for
 enhancements for R labelled @samp{wishlist}.  Suggestions can be
@@ -3545,7 +3545,7 @@ example by starting with @samp{Wishlist:}.
 Comments on and suggestions for the Windows port of R should be sent to
 @email{R-windows@@R-project.org}.
 
-Corrections to and comments on message translation should be sent to the
+Corrections to and comments on message translations should be sent to the
 last translator (listed at the top of the appropriate @samp{.po} file)
 or to the translation team as listed at
 @url{http://developer.R-project.org/TranslationTeams.html}.
