--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -2002,11 +2002,12 @@ installed.)
 
 There are a several tools available to reduce the size of PDF files,
 including Adobe Acrobat (not Reader), Apple's Preview@footnote{Select
-`Save as', and select `Reduce file size' from the `Quartz filter'
-menu'.}, some versions of Multivalent, Pdftk
+`Save as', and select `Reduce file size' from the `Quartz filter' menu':
+this can be accessed in other ways, for example by Automator.}, some
+versions of Multivalent, Pdftk
 (@uref{http://www.pdflabs.com/@/tools/@/pdftk-the-pdf-toolkit/}) and
-@command{qpdf} (@uref{http://qpdf.sourceforge.net/}), 
-and Ghostscript (which converts PDF to PDF by
+@command{qpdf} (@uref{http://qpdf.sourceforge.net/}), and Ghostscript
+(which converts PDF to PDF by
 
 @example
 ps2pdf @var{options} -dAutoRotatePages=/None @var{in}.pdf @var{out}.pdf
