--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1814,22 +1814,31 @@ should be removed and the build re-run.
 
 The @option{--resave-data} option allows saved images (@file{.rda} and
 @file{.RData} files) in the @file{data} directory to be optimized for
-size.  It can take values @code{"no"}, @code{"gzip"} (the default) and
-@code{"best"} (equivalent to giving it without a value).  Value
-@code{"best"} calls @code{tools::resaveRdaFiles} on the @file{data}
-directory, and adds a dependence on @code{R (>= 2.10)} if
-@command{bzip2} or @command{xz} compression is selected for any of the
-files.  If this is thought undesirable, @option{--resave-data="gzip"}
-will re-save with @command{gzip} compression any @acronym{ASCII} or
-uncompressed saves, and any saves from before @R{} 1.4.0.  It will also
-compress tabular files and convert @file{.R} files to saved images.
+size.  It can take values @code{"no"}, @code{"gzip"} (the default, which
+can be altered by setting the environment variable
+@env{_R_BUILD_RESAVE_DATA_}) and @code{"best"} (equivalent to giving it
+without a value).  Value @code{"best"} calls
+@code{tools::resaveRdaFiles} on the @file{data} directory, and adds a
+dependence on @code{R (>= 2.10)} if @command{bzip2} or @command{xz}
+compression is selected for any of the files.  If this is thought
+undesirable, @option{--resave-data="gzip"} will re-save with
+@command{gzip} compression any @acronym{ASCII} or uncompressed saves,
+and any saves from before @R{} 1.4.0.  It will also compress tabular
+files and convert @file{.R} files to saved images.
+
+The @option{--compact-vignettes} option will run
+@code{tools::compactPDF} over the PDF files in @file{inst/doc} (but not
+its subdirectories) to lossly compress them.  This is not enabled by
+default (it can be selected by environment variable
+@env{_R_BUILD_COMPACT_VIGNETTES_}) and needs @command{qpdf}
+(@uref{http://qpdf.sourceforge.net/}) to be available.
 
 It can be useful to run @code{R CMD check --check-subdirs=yes} on the
 built tarball as a final check on the contents.
 
 @code{R CMD build} can also build pre-compiled version of packages for
 binary distributions, but @code{R CMD INSTALL --build} is preferred (and
-is considerably more flexible).
+is more flexible).
 
 Note that prior to @R{} 2.13.0, @code{R CMD build} did some cleaning in
 the supplied source directory, but this was undocumented and is no
@@ -1840,17 +1849,18 @@ longer done.
 @cindex vignettes
 @cindex Sweave
 
-In addition to the help files in @file{Rd} format, @R{} packages allow the
-inclusion of documents in arbitrary other formats.  The standard
+In addition to the help files in @file{Rd} format, @R{} packages allow
+the inclusion of documents in arbitrary other formats.  The standard
 location for these is subdirectory @file{inst/doc} of a source package,
 the contents will be copied to subdirectory @file{doc} when the package
 is installed.  Pointers from package help indices to the installed
 documents are automatically created.  Documents in @file{inst/doc} can
 be in arbitrary format, however we strongly recommend to provide them in
-PDF format, such that users on all platforms can easily read them.  To
-ensure that they can be accessed from a browser, the file names should
-start with an @acronym{ASCII} letter and be comprised entirely of
-@acronym{ASCII} letters or digits or hyphen or underscore.
+PDF format, such that users on almost all platforms can easily read
+them.  To ensure that they can be accessed from a browser (and HTML
+index is provided), the file names should start with an @acronym{ASCII}
+letter and be comprised entirely of @acronym{ASCII} letters or digits or
+hyphen or underscore.
 
 A special case are documents in Sweave format, which we call
 @emph{package vignettes}.  Sweave allows the integration of @LaTeX{}
