--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1814,21 +1814,21 @@ should be removed and the build re-run.
 
 The @option{--resave-data} option allows saved images (@file{.rda} and
 @file{.RData} files) in the @file{data} directory to be optimized for
-size.  It can take values @code{"no"}, @code{"gzip"} (the default, which
-can be altered by setting the environment variable
-@env{_R_BUILD_RESAVE_DATA_}) and @code{"best"} (equivalent to giving it
-without a value).  Value @code{"best"} calls
-@code{tools::resaveRdaFiles} on the @file{data} directory, and adds a
-dependence on @code{R (>= 2.10)} if @command{bzip2} or @command{xz}
-compression is selected for any of the files.  If this is thought
-undesirable, @option{--resave-data="gzip"} will re-save with
+size.  It will also compress tabular files and convert @file{.R} files
+to saved images.  It can take values @code{no}, @code{gzip} (the default
+if this option is not suppplied, which can be changed by setting the
+environment variable @env{_R_BUILD_RESAVE_DATA_}) and @code{best}
+(equivalent to giving it without a value), which chooses the most
+effective compression.  Using @code{best} adds a dependence on @code{R
+(>= 2.10)} to the @file{DESCRIPTION} file if @command{bzip2} or
+@command{xz} compression is selected for any of the files.  If this is
+thought undesirable, @option{--resave-data=gzip} will re-save with
 @command{gzip} compression any @acronym{ASCII} or uncompressed saves,
-and any saves from before @R{} 1.4.0.  It will also compress tabular
-files and convert @file{.R} files to saved images.
+and any saves from before @R{} 1.4.0.
 
 The @option{--compact-vignettes} option will run
 @code{tools::compactPDF} over the PDF files in @file{inst/doc} (but not
-its subdirectories) to lossly compress them.  This is not enabled by
+its subdirectories) to losslessly compress them.  This is not enabled by
 default (it can be selected by environment variable
 @env{_R_BUILD_COMPACT_VIGNETTES_}) and needs @command{qpdf}
 (@uref{http://qpdf.sourceforge.net/}) to be available.
