--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -2755,6 +2755,18 @@ Note that @code{integer} in @acronym{FORTRAN} corresponds to @code{int}
 in C on all @R{} platforms.
 
 @item
+Under no circumstances should your compiled code ever call @code{abort}
+or @code{exit}: these terminate the user's @R{} process, quite possibly
+including all his unsaved work.  One usage that could call @code{abort}
+is the @code{assert} macro in C or C++ functions: if you use
+@code{assert} during development, make doubly sure that @code{NDEBUG} is
+defined in the released package (maybe by adding it to
+@code{PKG_CPPFLAGS}).
+
+This applies not only to your own code but to any external software you
+compile it or link to.
+
+@item
 Errors in memory allocation and reading/writing outside arrays are very
 common causes of crashes (e.g., segfaults) on some machines.
 See @ref{Using valgrind} for a tool which can be used to look for this.
